@startuml

title __SERVICE's Class Diagram__\n

  namespace com.gildedrose.service {
      class com.gildedrose.service.AgedBrieItemService {
          {static} - instance : AgedBrieItemService
          {static} + getInstance()
          # calculateNewQuality()
          - AgedBrieItemService()
      }
    }
  

  namespace com.gildedrose.service {
      class com.gildedrose.service.BackstagePassesItemService {
          {static} - instance : BackstagePassesItemService
          {static} + getInstance()
          # calculateNewQuality()
          - BackstagePassesItemService()
      }
    }
  

  namespace com.gildedrose.service {
      class com.gildedrose.service.ConjuredItemService {
          {static} - instance : ConjuredItemService
          {static} + getInstance()
          # calculateNewQuality()
          - ConjuredItemService()
      }
    }
  

  namespace com.gildedrose.service {
      abstract class com.gildedrose.service.ItemService {
          {static} + HIGHEST_QUALITY_VALUE : int
          {static} + LOWEST_QUALITY_VALUE : int
          + updateQuality()
          {abstract} # calculateNewQuality()
          # decreaseSellIn()
          # newQualityWithAjustment()
      }
    }
  

  namespace com.gildedrose.service {
      class com.gildedrose.service.NormalItemService {
          {static} - instance : NormalItemService
          {static} + getInstance()
          # calculateNewQuality()
          - NormalItemService()
      }
    }
  

  com.gildedrose.service.AgedBrieItemService -up-|> com.gildedrose.service.ItemService
  com.gildedrose.service.BackstagePassesItemService -up-|> com.gildedrose.service.ItemService
  com.gildedrose.service.ConjuredItemService -up-|> com.gildedrose.service.ItemService
  com.gildedrose.service.NormalItemService -up-|> com.gildedrose.service.ItemService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
